--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-mapbox-gl/maps": "^8.5.0",
+    "@react-navigation/native-stack": "^6.4.1",
     "expo": "~44.0.0",
+    "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-maps": "^0.30.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
