--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-mapbox-gl/maps": "^8.5.0",
+    "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.4.1",
     "expo": "~44.0.0",
     "expo-location": "~14.0.1",
@@ -19,6 +20,10 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-maps": "^0.30.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
