--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-mapbox-gl/maps": "^8.5.0",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.4.1",
     "expo": "~44.0.0",
