--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-native-mapbox-gl/maps": "^8.5.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.4.1",
+    "axios": "^0.25.0",
     "expo": "~44.0.0",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
@@ -20,6 +21,8 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-maps": "^0.30.1",
+    "react-native-qrcode-generator": "^1.2.2",
+    "react-native-qrcode-scanner": "^1.5.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-svg": "^12.1.1",
